font change in input field of the form

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,6 +84,7 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
   text-decoration: none;
+  font-style: oblique;
   outline-style: none;
 }
 form button {
